@@ -3,6 +3,7 @@ Changes in Release 2.3.7
 [SIDP-547] - VelocityEngine initialization was not effectively using UTF-8 input and output encoding
 [SIDP-549] - Incorrect handling of returned authn error in SSO profile handlers
 [SIDP-550] - Default IdP metadata provider uses an undocumented plugin
+[SIDP-552] - IdP-Metadata containing german umlauts shows encoding-problems on Microsoft Windows
 
 Changes in Release 2.3.6
 =============================================
